# src/providers/openrouter/definition.rs
@@ -39,7 +39,7 @@ const API_SURFACE: OpenAiCompatibleApiSurface = OpenAiCompatibleApiSurface::new(
             file_input: false,
             predicted_outputs: false,
             web_search: false,
-            prompt_caching: false,
+            prompt_cache_key: false,
             moderation: false,
             logprobs: false,
             multiple_choices: false,
@@ -64,7 +64,7 @@ const API_SURFACE: OpenAiCompatibleApiSurface = OpenAiCompatibleApiSurface::new(
             file_input: false,
             conversation: false,
             prompt_templates: false,
-            prompt_caching: false,
+            prompt_cache_key: true,
             context_management: false,
             include: &[],
             moderation: false,
